--- a/3/DirectAgents.Web/DirectAgents.Web/packages.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="FluentValidationNA" version="1.2.16" targetFramework="net45" />
   <package id="KendoGridBinderEx" version="5.0.0.10" targetFramework="net45" />
+  <package id="MicosoftReportViewerWebForms_v11" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
@@ -20,6 +21,7 @@
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
+  <package id="ReportViewerForMvc" version="1.0.1" targetFramework="net45" />
   <package id="System.Linq.Dynamic.Library" version="1.1.14" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
