--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -36,6 +36,12 @@
     <!--<add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />-->
     <add key="BudgetAlerts_TestEmail" value="" />
     <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
+
+    <add key="SSRS_ReportServerUrl" value="http://biz/ReportServer_SQLEXPRESS" />
+    <!--<add key="SSRS_ReportServerUrl" value="http://173.204.123.91/ReportServer_SQL3" />
+    <add key="SSRS_ReportServerUsername" value="reportviewertest" />
+    <add key="SSRS_ReportServerPassword" value="sp0ngbOb" />-->
+
     <!-- APIs -->
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
     <add key="BingCustomerID" value="234647" />
