--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -28,12 +28,19 @@
     <add key="PATH_Search" value="C:\DA\portal\search" />
     <add key="GmailEmailer_Username" value="portal@directagents.com" />
     <add key="GmailEmailer_Password" value="Welcomenew1" />
+    <!--<add key="SSRS_ReportServerUrl" value="http://biz/ReportServer_SQLEXPRESS" />-->
+    <add key="SSRS_ReportServerUrl" value="http://173.204.123.91/ReportServer_SQL3" />
+    <add key="SSRS_ReportServerUsername" value="reportviewertest" />
+    <add key="SSRS_ReportServerPassword" value="sp0ngbOb" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
+      <buildProviders>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      </buildProviders>
     </compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
@@ -52,7 +59,9 @@
     </pages>
     <sessionState timeout="525600" />
     <customErrors mode="Off" />
-  </system.web>
+  <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
+    </httpHandlers></system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
@@ -61,7 +70,7 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
+    <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" /></handlers>
     <modules>
       <remove name="RoleManager" />
     </modules>
