--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Areas\Prog\Controllers\TestController.cs" />
     <Compile Include="Areas\Prog\Models\CreatPerfVM.cs" />
     <Compile Include="Areas\Prog\Models\ExecSumVM.cs" />
+    <Compile Include="Areas\Prog\Models\ReportVM.cs" />
     <Compile Include="Areas\Prog\Models\StratSumVM.cs" />
     <Compile Include="Areas\Prog\Models\WeekSumVM.cs">
       <SubType>Code</SubType>
