--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -256,6 +256,10 @@
     <Compile Include="MigrationsTD\201603212004059_Mig_BudgInfo_Id.Designer.cs">
       <DependentUpon>201603212004059_Mig_BudgInfo_Id.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201604221549032_AdvUpdates.cs" />
+    <Compile Include="MigrationsTD\201604221549032_AdvUpdates.Designer.cs">
+      <DependentUpon>201604221549032_AdvUpdates.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -425,6 +429,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201603212004059_Mig_BudgInfo_Id.resx">
       <DependentUpon>201603212004059_Mig_BudgInfo_Id.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201604221549032_AdvUpdates.resx">
+      <DependentUpon>201604221549032_AdvUpdates.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
