--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -994,6 +994,7 @@
     <Content Include="Areas\TD\Views\Stats\Creative.cshtml" />
     <Content Include="Areas\TD\Views\Stats\Site.cshtml" />
     <Content Include="Areas\TD\Views\Campaigns\Show.cshtml" />
+    <Content Include="Areas\TD\Views\Advertisers\EditLogo.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
