creative update for demo accts

--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -1025,10 +1025,18 @@
     <Content Include="Images\bullet_triangle.gif" />
     <Content Include="Images\creativethumb.gif" />
     <Content Include="Images\da_logo.jpg" />
+    <Content Include="Images\Demo\sees1.jpg" />
+    <Content Include="Images\Demo\sees2.jpg" />
+    <Content Include="Images\Demo\sees3.jpg" />
+    <Content Include="Images\Demo\sees4.jpg" />
     <Content Include="Images\Demo\seph1.jpg" />
     <Content Include="Images\Demo\seph2.jpg" />
     <Content Include="Images\Demo\seph3.jpg" />
     <Content Include="Images\Demo\seph4.jpg" />
+    <Content Include="Images\Demo\sony1.jpg" />
+    <Content Include="Images\Demo\sony2.jpg" />
+    <Content Include="Images\Demo\sony3.jpg" />
+    <Content Include="Images\Demo\sony4.jpg" />
     <Content Include="Images\glyphicon-off.png" />
     <Content Include="Images\icon_metrics.gif" />
     <Content Include="Images\icon_mobile.gif" />
@@ -1042,9 +1050,6 @@
     <Content Include="Images\logoSelectQuote.png" />
     <Content Include="Images\logo_seeso_200px.jpg" />
     <Content Include="Images\programmatic.png" />
-    <Content Include="Images\Seeso_300x600.jpg" />
-    <Content Include="Images\Seeso_728x90.jpg" />
-    <Content Include="Images\Seeso_Video.jpg" />
     <Content Include="Images\spacer.gif" />
     <Content Include="ReportViewerWebForm.aspx" />
     <Content Include="Scripts\blackbird.js" />
