--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Areas\TD\Controllers\PlatformsController.cs" />
     <Compile Include="Areas\TD\Controllers\ReportsController.cs" />
     <Compile Include="Areas\TD\Controllers\StatsController.cs" />
+    <Compile Include="Areas\TD\Controllers\TDadsController.cs" />
     <Compile Include="Areas\TD\Models\AccountMaintenanceVM.cs" />
     <Compile Include="Areas\TD\Models\CampaignPacingVM.cs" />
     <Compile Include="Areas\TD\Models\DailySummariesVM.cs" />
@@ -995,6 +996,7 @@
     <Content Include="Areas\TD\Views\Stats\Site.cshtml" />
     <Content Include="Areas\TD\Views\Campaigns\Show.cshtml" />
     <Content Include="Areas\TD\Views\Advertisers\EditLogo.cshtml" />
+    <Content Include="Areas\TD\Views\TDads\Index.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
