--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -997,6 +997,7 @@
     <Content Include="Areas\TD\Views\Campaigns\Show.cshtml" />
     <Content Include="Areas\TD\Views\Advertisers\EditLogo.cshtml" />
     <Content Include="Areas\TD\Views\TDads\Index.cshtml" />
+    <Content Include="Areas\TD\Views\TDads\Edit.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
